# ConfuprDZ

./: README.md  pyproject.toml  requirements-dev.txt
examples/: devops.conf  game_balance.conf  iot.conf
src/configlang/: __init__.py  ast.py  cli.py  errors.py  evaluator.py  parser.py
tests/: conftest.py  test_variant2.py
