[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configlang-variant2"
version = "1.0.0"
description = "CLI translator for an educational configuration language (Variant 2) -> JSON"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Student", email = "student@example.com"}]
license = {text = "MIT"}
dependencies = [
  "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
configlang = "configlang.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
